<resources>
    <string name="app_name">Incident Reporting</string>


    <!-- Sign in -->
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_prompt_force_number">Force Number</string>
    <string name="sign_in_prompt_password">Password</string>
    <string name="sign_in_action_submit">Submit</string>

    <!-- walkthrough-->
    <string name="walkthrough_title">Walkthrough</string>

    <!-- Home -->
    <string name="home_title">Home</string>
    <string name="home_welcome">Welcome</string>
    <string name="home_shift_details">Shift Details</string>
    <string name="home_vehicle_details">Vehicle Details</string>
    <string name="home_Date">Date: </string>
    <string name="home_shift_label">Shift: </string>
    <string name="home_area">Area: </string>
    <string name="home_driver">Driver: </string>
    <string name="home_reg">Reg: </string>
    <string name="home_occ">Occ: </string>

    <string name="home_onduty">ON DUTY</string>
    <string name="home_onbreak">ON BREAK</string>

    <string name="home_open_navigation">Open Navigation</string>
    <string name="home_close_navigation">Close Navigation</string>
    <string-array name="navigation_array">
        <!--<item>Home</item>-->
        <item>Map</item>
        <item>Walkthrough</item>
        <item>logout</item>
    </string-array>

    <!-- Incidents -->
    <string name="incident_title">Incidents</string>

    <!-- Active call -->
    <string name="active_call_title">Active Call</string>

    <!-- Walkthrough -->
    <string name="wt_active_call_title">What is an Active Call?</string>
    <string name="wt_active_call_detail">Active Calls refer to calls that have been assigned or requested by an officer.</string>
    <string name="wt_active_call_detail_2">They remain active until they are marked as closed.</string>

    <string name="wt_location_title">Share My Location</string>
    <string name="wt_location_detail">A Field Officers location is tracked and shared, so backup and support resources can be dispatched in a more effective and timely manner.</string>

    <string name="wt_incident_marker_title">View Incident Marker</string>
    <string name="wt_incident_marker_detail">As a field officer, you will to identify incidents and view the incident details by simple tapping on the marker.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Incidents-->
    <string name="assualt_label">Assault</string>
    <string name="officer_label">JMPD OFFICER</string>
    <string name="weapons_label">Weapons</string>
    <string name="severity_level_label">Severity - Level </string>
</resources>
